<resources  tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ESC BCM2.1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="diver_exit_time">再按一次退出！</string>
    <string name="msg_acra_toast">程序出现异常！</string>
    <string name="loginname">账户</string>
    <string name="please_input_hint">请输入</string>
    <string name="loginnamehint">请输入账号</string>
    <string name="loginpsw">登录密码</string>
    <string name="loginpswhint">请输入密码</string>
    <string name="message">消息</string>
    <string name="addressList">通信录</string>
    <string name="emergenceMenege">应急管理</string>
    <string name="controlCenter">指挥中心</string>
    <string name="personalCenter">我的</string>
    <string name="messageCenter">消息中心</string>
    <string name="load_full">没有更多消息</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载更多</string>
    <string name="permission_granted_save_tip">请授予程序存储权限</string>
    <string name="permission_granted_audio_tip">请授予程序录音权限</string>
    <string name="d">图片描述</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="tasktost">任务通知</string>
    <string name="xitongtoast">系统通知</string>
    <string name="emergencytoast">紧急通知</string>
    <string name="mymessage">我的消息</string>
    <string name="xitong">系统</string>
    <string name="shortmessage">短信</string>
    <string name="email">邮件</string>
    <string name="app">APP</string>
    <string name="messageedit">请输入通知内容</string>
    <string name="editflithint">搜索</string>
    <string name="searchno">未搜索到结果</string>
    <string name="introduce">简介</string>
    <string name="personal_details">详细资料</string>
    <string name="name">名称</string>
    <string name="sex">性别</string>
    <string name="gangwei">岗位</string>
    <string name="phongnumber">联系电话</string>
    <string name="phongnumber2">备用电话</string>
    <string name="mobile_phone">手机</string>
    <string name="phone_number">电话</string>
    <string name="bumen">部门</string>
    <string name="sendmessage">发消息</string>
    <string name="emailbox">邮箱</string>
    <string name="eventevaluation">事件评估</string>
    <string name="add_event">新增事件</string>
    <string name="event_manage">事件管理</string>
    <string name="plan_manage">预案管理</string>
    <string name="sign_in_assign">签到与指派</string>
    <string name="plan_execute">预案执行</string>
    <string name="emergency_evaluation">应急评估</string>
    <string name="drill_evaluation">演练评估</string>
    <string name="executing">执行中</string>
    <string name="rejected">已驳回</string>
    <string name="wait_start">待启动</string>
    <string name="started">已启动</string>
    <string name="wait_authorize">待授权</string>
    <string name="authorized">已授权</string>
    <string name="people_sign">人员签到</string>
    <string name="people_assign">人员指派</string>
    <string name="addevaluation">添加评估</string>
    <string name="dismissvaluation">驳回事件</string>
    <string name="planstar">预案启动</string>
    <string name="authorization_decision">授权决策</string>
    <string name="people_sign_in">人员签到与指派</string>
    <string name="personnel_assignment">人员指派</string>
    <string name="plan_execution">预案执行</string>
    <string name="event_procedure">事件流程</string>
    <string name="collaborative_circular">协同通告</string>
    <string name="add_contact">添加联系人</string>
    <string name="select_send_object">选择发送对象</string>
    <string name="select_stage">选择阶段</string>
    <string name="eventname">事件名称</string>
    <string name="eventnamehint">请输入事件名称（必填）</string>
    <string name="event_desc_hint">填写事件描述（必填）</string>
    <string name="event_happen_time_hint">填写事件发生时间（必填）</string>
    <string name="event_discover_hint">填写事件发现人（必填）</string>
    <string name="suggestion_hint">填写建议（必填）</string>
    <string name="emergency_type">应急类型</string>
    <string name="business_type">业务类型</string>
    <string name="business_type_hint">请选择业务类型（必选）</string>
    <string name="event_level">事件等级</string>
    <string name="event_level_hint">请选择事件等级（必选）</string>
    <string name="event_background">事件场景</string>
    <string name="event_happen_time">事件发生时间</string>
    <string name="event_discover">事件发现人</string>
    <string name="event_background_hint">选择事件场景</string>
    <string name="event_origin_hint">选择事件来源</string>
    <string name="emergency_disposal_process">应急处置流程</string>
    <string name="emergency_disposal_process_hint">选择应急处置流程</string>
    <string name="plan_background_hint">选择涉及预案</string>
    <string name="plan_drill_hint">选择演练预案</string>
    <string name="drill_type_hint">请选择演练类型（必填）</string>
    <string name="plan_offer_hint">选择可选预案</string>
    <string name="plan_other_hint">选择其他预案</string>
    <string name="plan_kinds_hint">选择分类预案</string>
    <string name="plan_name">预案名称</string>
    <string name="reference_plan">参考预案</string>
    <string name="event_des">事件描述</string>
    <string name="suggestion">应对建议</string>
    <string name="submit">提交</string>
    <string name="sure">确定</string>
    <string name="drillplan">演练计划</string>
    <string name="event">事件</string>
    <string name="eventnnumber">事件编号</string>
    <string name="eventpeople">事件提交人</string>
    <string name="eventtime">提交时间</string>
    <string name="discoverer">事件发现人</string>
    <string name="discoveryTime">事件发生时间</string>
    <string name="eventovertime">已用时</string>
    <string name="dismiss">驳回</string>
    <string name="start">启动</string>
    <string name="donesug">处置意见</string>
    <string name="donesughint">请输入处置意见</string>
    <string name="plannumber">预案编号</string>
    <string name="planpeople">预案启动人</string>
    <string name="startime">启动时间</string>
    <string name="plan_des">预案摘要</string>
    <string name="plan_type">预案类型</string>
    <string name="planauth">授权处置意见</string>
    <string name="stop">终止</string>
    <string name="auth">授权</string>
    <string name="planbackground">预案场景</string>
    <string name="eventdesc">事件详情</string>
    <string name="signin">签到</string>
    <string name="whodone">执行人:</string>
    <string name="assignment">指派</string>
    <string name="planexcdesc">预案详情</string>
    <string name="operation_instruction">操作指导</string>
    <string name="operation_menu">操作手册</string>
    <string name="execute">执行</string>
    <string name="change">切换</string>
    <string name="execute_complete">执行完成</string>
    <string name="execute_start">开始执行</string>
    <string name="execute_error">执行异常</string>
    <string name="error_cancel">异常解除</string>
    <string name="plan_overtime">预案已用时</string>
    <string name="done_status">完成状态</string>
    <string name="submit_infomation">提交信息</string>
    <string name="alltime">总用时</string>
    <string name="okdone">已完成</string>
    <string name="send">发送</string>
    <string name="contact_people">联系人</string>
    <string name="sendobject">发送对象</string>
    <string name="phone_email">手机/邮箱</string>
    <string name="stage">阶段</string>
    <string name="event_process">事件流程</string>
    <string name="command_display">指挥与展示</string>
    <string name="resouce_prepare">应急资源就绪情况</string>
    <string name="login_edit_ip_http_txt">http://</string>
    <string name="login_edit_ip_https_txt">https://</string>
    <string name="control_center_emergency_txt">【应急】</string>
    <string name="control_center_drill_txt">【演练】</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="send_fail">Send failed</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">Delete voice</string>
    <string name="delete_video">Delete video</string>
    <string name="delete">Delete</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="button_logout">Logout</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prompt">Prompt</string>
    <string name="clear_records">Clear conversation?</string>
    <string name="clear_all_records">Clear all conversations？</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">Record video</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">Voice</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_search">Find</string>
    <string name="button_add">Add</string>
    <string name="search_header">Search</string>
    <string name="network_isnot_available">The network is not available</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="select_contacts">Select the contact</string>
    <string name="confirm_forward_to">Confirm to forward to：%1$s ?</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
    <string name="exit_group_hint">The group messages will not be received after exiting the group</string>
    <string name="dissolution_group_hint">The group will be dismissed after exiting</string>
    <string name="exit_group">Exit</string>
    <string name="connect_conflict">The same account was loggedin in other device</string>
    <string name="em_user_remove">This user has been removed</string>
    <string name="set">Settings</string>
    <string name="notify">New message notification</string>
    <string name="newnotify">Receiving a new message</string>
    <string name="shake">Shake</string>
    <string name="chatset">Chat settings</string>
    <string name="yangshengqi">Use speaker</string>
    <string name="book_black">Black list</string>
    <string name="save_new_nickname">Save new nickname</string>
    <string name="diagnose">Diagnose</string>
    <string name="push_nick">IOS offline push nick</string>
    <string name="Current_version">Current version</string>
    <string name="input_new_nick_hint">Input a new nick</string>
    <string name="nickname_description">Once this nick is set, this nick will be used in push notification (by default this is HuanXin ID ) when the receiver is using the IOS device.</string>
</resources>