<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/we_title_height"
        android:background="@color/top_bar_normal_bg"
        android:gravity="center_vertical" >

        <include layout="@layout/commom_back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/diagnose"
            android:textColor="#fff"
            android:textSize="@dimen/we_title_textsize" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Current_version"
            style="@style/normal_text" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/normal_text" />
    </LinearLayout>

    <Button
        android:id="@+id/button_uploadlog"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="32dp"
        android:background="@color/top_bar_normal_bg"
        android:text="@string/button_uploadlog"
        android:textColor="@android:color/white"
        android:textSize="@dimen/we_title_textsize" />

</LinearLayout>