<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.dssm.esc.view.widget.Title_Layout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="43dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/edit_ip_rl_http"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/border_gray"
            android:layout_marginRight="19dp"
            android:layout_height="105dp">

            <ImageView
                android:id="@+id/edit_ip_iv_http"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/http"/>

            <TextView
                android:id="@+id/edit_ip_tv_http"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/login_edit_ip_http_txt"
                android:layout_below="@+id/edit_ip_iv_http"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/edit_ip_rl_https"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/border_gray"
            android:layout_marginLeft="19dp"
            android:layout_height="105dp">

            <ImageView
                android:id="@+id/edit_ip_iv_https"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/https"/>

            <TextView
                android:id="@+id/edit_ip_tv_https"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/login_edit_ip_https_txt"
                android:layout_below="@+id/edit_ip_iv_https"/>

        </RelativeLayout>

    </LinearLayout>

    <com.dssm.esc.view.widget.DeleteEditText
        android:id="@+id/edit_ip"
        style="@style/default_edit_style"
        android:layout_height="59dp"
        android:layout_margin="15dp"
        android:inputType="textUri"
        android:maxLength="50"
        android:layout_gravity="center"
        android:gravity="center"
        android:lines="1"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyz-_:/."
        />

    <Button
        android:id="@+id/sure_bt"
        style="@style/default_textview_btn"
        android:layout_marginTop="75dp"
        android:text="@string/sure" />
</LinearLayout>
